# opencv-cmake-error

./: .gitignore  CMakeLists.txt  README.md  build_opencv.bash  main.cpp
